fix: :bug: Adjusment on size image
Adjusment on size image

--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -1,10 +1,14 @@
-FROM golang:1.23 AS builder
+FROM golang:1.23-alpine AS builder
+
+RUN apk --no-cache add upx
 
 WORKDIR /usr/src/app
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o fullcycle main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -a -ldflags="-s -w" -o fullcycle main.go
+
+RUN upx --best fullcycle
 
 FROM scratch
 
