--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -2,10 +2,18 @@ FROM node:14
 
 WORKDIR /usr/src/app
 
-COPY package*.json ./
+ENV DOCKERIZE_VERSION v0.8.0
+
+RUN apt-get update \
+    && apt-get install -y wget \
+    && wget -O - https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz | tar xzf - -C /usr/local/bin \
+    && apt-get autoremove -yqq --purge wget && rm -rf /var/lib/apt/lists/*
+
+COPY package*.json .
+
 RUN npm install
 
-COPY . .
+COPY . . 
 
 EXPOSE 3000
 CMD ["npm", "start"]
