--- a/nodejs/docker-compose.yml
+++ b/nodejs/docker-compose.yml
@@ -9,27 +9,33 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - nodejs
+      - app
 
-  nodejs:
+  app:
     build:
       context: .
-    container_name: nodejs
+    container_name: app
+    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh
     volumes:
-      - ./:/usr/src/app
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    tty: true
     ports:
       - "3000:3000"
     depends_on:
-      - mysql
+      - db
 
-  mysql:
+  db:
     image: mysql:5.7
-    container_name: mysql
+    command: --innodb-use-native-aio=0
+    container_name: db
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: peopledb
+    tty: true
     volumes:
-      - mysql_data:/var/lib/mysql
+      - ./mysql:/var/lib/mysql
 
 volumes:
-  mysql_data:
+  mysql:
