--- a/nodejs/docker-compose.yml
+++ b/nodejs/docker-compose.yml
@@ -15,9 +15,14 @@ services:
     build:
       context: .
     container_name: app
-    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh
+    entrypoint:
+      [
+        "/bin/sh",
+        "-c",
+        "dockerize -wait tcp://db:3306 -timeout 20s && exec docker-entrypoint.sh npm start",
+      ]
     volumes:
-      - .:/usr/src/app
+      - ./:/usr/src/app
       - /usr/src/app/node_modules
     tty: true
     ports:
